--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 /* DEFAULTS */
 :root {font-size: 16pt;}
-* {font-family: 'Poppins', sans-serif;color: #333;font-size: 1rem;}
+* {font-family: 'Quicksand', sans-serif;color: #333;font-size: 1rem;}
 body,html {margin: 0;}
 img {max-width: 100%;}
 
@@ -43,10 +43,17 @@ img {max-width: 100%;}
 
 .sub-menu{
   list-style: none;
-  display: none;
+  padding-left: 20px;
 }
 
-#menu-item-85:hover .sub-menu{
+.sub-menu li{
+  clear: left;
+  background-color: #F8F8F8;
+  width: 120px;
+  padding-left: 10px;
+}
+
+#menu-item-85:hover .sub-menu li{
   display: block;
 }
 
@@ -81,4 +88,32 @@ img {max-width: 100%;}
   background-size: cover;
   height: 75vh;
   background-position: center;
+}
+
+.container-a {
+  background-color: #F8F8F8;
+}
+
+.faq-subheader {
+  font-weight: bold;
+}
+
+.faq-li {
+  font-size: 14px;
+}
+
+.faq-p {
+  font-size: 14px;
+}
+
+.ac-subheader {
+  font-weight: bold;
+}
+
+.ac-li {
+  font-size: 14px;
+}
+
+.ac-p {
+  font-size: 14px;
 }
