--- a/css/main.css
+++ b/css/main.css
@@ -60,20 +60,21 @@ img {max-width: 100%;}
   top: 5px;
 }
 
-.sub-menu li{
-  clear: left;
-  background-color: #F8F8F8;
-  width: 120px;
-  padding-left: 10px;
-}
-
-#menu-item-85:hover .sub-menu li{
+.show .sub-menu{
   display: block;
 }
 
+#menu-item-85:hover .sub-menu{
+    display: block;
+  }
+
+.bg-light {
+    background-color: pink!important;
+  }
+
 .sub-menu li{
   clear: left;
-  background-color: #F8F8F8;
+  background-color: pink;
   width: 110%;
   padding-left: 10px;
 }
@@ -202,32 +203,4 @@ footer li{
   column-count: 2;
 	column-gap: 10px;
 	column-rule: none;
-}
-
-.container-a {
-  background-color: #F8F8F8;
-}
-
-.faq-subheader {
-  font-weight: bold;
-}
-
-.faq-li {
-  font-size: 14px;
-}
-
-.faq-p {
-  font-size: 14px;
-}
-
-.ac-subheader {
-  font-weight: bold;
-}
-
-.ac-li {
-  font-size: 14px;
-}
-
-.ac-p {
-  font-size: 14px;
 }
